add browser tab image

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,16 +4,19 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Pandu College Hackathon 2026 | The Ultimate Hackathon Experience</title>
+    <link rel="icon" type="image/png" href="/logo.png" />
     <meta name="description" content="Join 100+ hackers for 24 hours of innovation at Pandu College Hackathon 2026. 15k+ in prizes. Janunary 30 in Guwahati, Assam. Register now!" />
     <meta name="keywords" content="hackathon, coding competition, tech event, Guwahati, Assam, AI, cybersecurity, sustainability" />
 
     <meta property="og:title" content="Pandu College Hackathon 2026 | The Ultimate Hackathon Experience"/>
     <meta property="og:description" content="Join 100+ hackers for 24 hours of innovation. 15k+ in prizes."/>
     <meta property="og:type" content="website"/>
-    <meta property="og:image" content=""/>
+    <meta property="og:image" content="https://pandu-hackathon.onrender.com/logo.png"/>
+
 
     <meta name="twitter:card" content="summary_large_image"/>
     <meta name="twitter:site" content="@PanduHacathon"/>
+    <meta name="twitter:image" content="https://pandu-hackathon.onrender.com/logo.png"/>
     
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
